--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "pandas>=1.3.0",
     "torch>=1.9.0",
     "scikit-learn>=1.0.0",
+    "numpydoc>=1.3",
 ]
 
 [project.optional-dependencies]
