--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,11 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.8"
+    
+# Explicitly set the version of Python and its requirements
+python:
+  install:
+    - requirements: docs/requirements.txt
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
