branch commit for optimizing equal_vocab

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,7 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Dataset
+bias_amplification/text/Dataset_test/*.pkl
+bias_amplification/text/Dataset_test/glove.6B.50d.w2vformat.txt
