--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [
     {name = "Bhanu Tokas", email = "btokas@asu.edu"},
-    {name = "Rahul Nair", email = "rnair21@asu.edu"}
+    {name = "Rahul Nair", email = "rnair21@asu.edu"},
+    {name = "Ushnesha Daripa", email = "udaripa@asu.edu"}
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -23,7 +24,7 @@ classifiers = [
 dependencies = [
     "numpy>=1.20.0",
     "pandas>=1.3.0",
-    "torch>=1.9.0",
+    "torch>=2.2.0,<2.3.0",
     "scikit-learn>=1.0.0",
     "numpydoc>=1.3",
 ]
@@ -40,9 +41,25 @@ docs = [
     "sphinx-rtd-theme>=1.0.0",
     "numpydoc>=1.2.0",
 ]
+text = [
+    "torchtext>=0.15.0,<0.19.0",
+    "transformers>=4.20.0",
+    "gensim>=4.0.0",
+    "sentence-transformers>=2.2.0",
+    "nltk>=3.7",
+    "tqdm>=4.64.0",
+]
+
 
 [tool.setuptools]
-packages = ["bias_amplification", "bias_amplification.utils", "bias_amplification.attacker_models", "bias_amplification.metrics"]
+packages = [
+    "bias_amplification", 
+    "bias_amplification.utils", 
+    "bias_amplification.attacker_models", 
+    "bias_amplification.metrics",
+    "bias_amplification.text",
+    "bias_amplification.text.utils"
+    ]
 
 [tool.black]
 line-length = 100
